find_package(Qt6 6.4 REQUIRED COMPONENTS Test)

include(../CMake/ListFilesTesting.cmake)

add_subdirectory("pqt_scriptsfilespaths")
add_subdirectory("pqt_scriptsclipboard")
add_subdirectory("pqt_scriptsconfig")
add_subdirectory("pqt_scriptsfiledialog")
add_subdirectory("pqt_scriptsimages")
add_subdirectory("pqt_scriptsfilemanagement")
add_subdirectory("pqt_filefoldermodel")
